// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Left Sidebar should add left-sidebar-nav-close, left-sidebar-footer-close, and left-sidebar-icon-close classes
    when leftSidebarToggle is false 1`] = `
<pf-layout-wrapper-left-sidebar
  leftSidebarToggle="false"
  ngAppRoot={[Function String]}
  sidebarNavigationLinks={[Function Array]}
>
  <ul
    class="left-sidebar-nav pt-2 pl-0 m-0 mb-4 left-sidebar-nav-close"
    ng-reflect-klass="left-sidebar-nav pt-2 pl-0 m-0"
    ng-reflect-ng-class="[object Object]"
  >
    
    
    
    
  
  </ul>
  <div
    class="left-sidebar-footer left-sidebar-footer-close"
    ng-reflect-klass="left-sidebar-footer"
    ng-reflect-ng-class="[object Object]"
  >
    
    
    <i
      class="fa fa-lg fa-angle-double-right left-sidebar-icon-close"
      ng-reflect-klass="fa fa-lg"
      ng-reflect-ng-class="[object Object]"
    />
    
  
  </div>
  
</pf-layout-wrapper-left-sidebar>
`;

exports[`Left Sidebar should add left-sidebar-nav-open, left-sidebar-footer-open, and left-sidebar-icon-open classes
    when leftSidebarToggle is true 1`] = `
<pf-layout-wrapper-left-sidebar
  leftSidebarToggle={[Function Boolean]}
  ngAppRoot={[Function String]}
  sidebarNavigationLinks={[Function Array]}
>
  <ul
    class="left-sidebar-nav pt-2 pl-0 m-0 mb-4 left-sidebar-nav-open"
    ng-reflect-klass="left-sidebar-nav pt-2 pl-0 m-0"
    ng-reflect-ng-class="[object Object]"
  >
    
    
    
    
  
  </ul>
  <div
    class="left-sidebar-footer left-sidebar-footer-open"
    ng-reflect-klass="left-sidebar-footer"
    ng-reflect-ng-class="[object Object]"
  >
    
    
    <i
      class="fa fa-lg fa-angle-double-left left-sidebar-icon-open"
      ng-reflect-klass="fa fa-lg"
      ng-reflect-ng-class="[object Object]"
    />
    
  
  </div>
  
</pf-layout-wrapper-left-sidebar>
`;

exports[`Left Sidebar should include ng app root in url when sidebar link is ng app 1`] = `
<pf-layout-wrapper-left-sidebar
  leftSidebarToggle="false"
  ngAppRoot={[Function String]}
  sidebarNavigationLinks={[Function Array]}
>
  <ul
    class="left-sidebar-nav pt-2 pl-0 m-0 mb-4 left-sidebar-nav-close"
    ng-reflect-klass="left-sidebar-nav pt-2 pl-0 m-0"
    ng-reflect-ng-class="[object Object]"
  >
    
    
    
    
    
      
    <li
      class="py-2 pl-2 pr-0"
    >
      
        
      
      
          
      <a
        href="\\\\ngapproot\\\\Mock Link1 URL"
        placement="right"
      >
        
            
        <i
          class="fa-users"
          ng-reflect-ng-class="fa-users"
        />
        
          
      </a>
      
        
      
        
      
      
      
    </li>
    
    
    
  
  </ul>
  <div
    class="left-sidebar-footer left-sidebar-footer-close"
    ng-reflect-klass="left-sidebar-footer"
    ng-reflect-ng-class="[object Object]"
  >
    
    
    <i
      class="fa fa-lg fa-angle-double-right left-sidebar-icon-close"
      ng-reflect-klass="fa fa-lg"
      ng-reflect-ng-class="[object Object]"
    />
    
  
  </div>
  
</pf-layout-wrapper-left-sidebar>
`;

exports[`Left Sidebar should not include ng app root in url when sidebar link is not ng app 1`] = `
<pf-layout-wrapper-left-sidebar
  leftSidebarToggle="false"
  ngAppRoot={[Function String]}
  sidebarNavigationLinks={[Function Array]}
>
  <ul
    class="left-sidebar-nav pt-2 pl-0 m-0 mb-4 left-sidebar-nav-close"
    ng-reflect-klass="left-sidebar-nav pt-2 pl-0 m-0"
    ng-reflect-ng-class="[object Object]"
  >
    
    
    
    
    
      
    <li
      class="py-2 pl-2 pr-0"
    >
      
        
      
      
          
      <a
        href="Mock Link1 URL"
        placement="right"
      >
        
            
        <i
          class="fa-users"
          ng-reflect-ng-class="fa-users"
        />
        
          
      </a>
      
        
      
        
      
      
      
    </li>
    
    
    
  
  </ul>
  <div
    class="left-sidebar-footer left-sidebar-footer-close"
    ng-reflect-klass="left-sidebar-footer"
    ng-reflect-ng-class="[object Object]"
  >
    
    
    <i
      class="fa fa-lg fa-angle-double-right left-sidebar-icon-close"
      ng-reflect-klass="fa fa-lg"
      ng-reflect-ng-class="[object Object]"
    />
    
  
  </div>
  
</pf-layout-wrapper-left-sidebar>
`;

exports[`Left Sidebar should not show sidebar link names when leftSidebarToggle is false 1`] = `
<pf-layout-wrapper-left-sidebar
  leftSidebarToggle="false"
  ngAppRoot={[Function String]}
  sidebarNavigationLinks={[Function Array]}
>
  <ul
    class="left-sidebar-nav pt-2 pl-0 m-0 mb-4 left-sidebar-nav-close"
    ng-reflect-klass="left-sidebar-nav pt-2 pl-0 m-0"
    ng-reflect-ng-class="[object Object]"
  >
    
    
    
    
    
      
    <li
      class="py-2 pl-2 pr-0"
    >
      
        
      
      
          
      <a
        href="/ng/Mock Link1 URL"
        placement="right"
      >
        
            
        <i
          class="fa-users"
          ng-reflect-ng-class="fa-users"
        />
        
          
      </a>
      
        
      
        
      
      
      
    </li>
    
    
    
    
      
    <li
      class="py-2 pl-2 pr-0"
    >
      
        
      
      
          
      <a
        href="/ng/Mock Link2 URL"
        placement="right"
      >
        
            
        <i
          class="fa-calculator"
          ng-reflect-ng-class="fa-calculator"
        />
        
          
      </a>
      
        
      
        
      
      
      
    </li>
    
    
    
  
  </ul>
  <div
    class="left-sidebar-footer left-sidebar-footer-close"
    ng-reflect-klass="left-sidebar-footer"
    ng-reflect-ng-class="[object Object]"
  >
    
    
    <i
      class="fa fa-lg fa-angle-double-right left-sidebar-icon-close"
      ng-reflect-klass="fa fa-lg"
      ng-reflect-ng-class="[object Object]"
    />
    
  
  </div>
  
</pf-layout-wrapper-left-sidebar>
`;

exports[`Left Sidebar should show sidebar link names when leftSidebarToggle is true 1`] = `
<pf-layout-wrapper-left-sidebar
  leftSidebarToggle={[Function Boolean]}
  ngAppRoot={[Function String]}
  sidebarNavigationLinks={[Function Array]}
>
  <ul
    class="left-sidebar-nav pt-2 pl-0 m-0 mb-4 left-sidebar-nav-open"
    ng-reflect-klass="left-sidebar-nav pt-2 pl-0 m-0"
    ng-reflect-ng-class="[object Object]"
  >
    
    
    
    
    
      
    <li
      class="py-2 pl-2 pr-0"
    >
      
        
      
      
        
      
      
          
      <a
        href="/ng/Mock Link1 URL"
      >
        
            
        <i
          class="fa-users"
          ng-reflect-ng-class="fa-users"
        />
        
            Mock Link1 Name
      </a>
      
        
      
      
    </li>
    
    
    
    
      
    <li
      class="py-2 pl-2 pr-0"
    >
      
        
      
      
        
      
      
          
      <a
        href="/ng/Mock Link2 URL"
      >
        
            
        <i
          class="fa-calculator"
          ng-reflect-ng-class="fa-calculator"
        />
        
            Mock Link2 Name
      </a>
      
        
      
      
    </li>
    
    
    
  
  </ul>
  <div
    class="left-sidebar-footer left-sidebar-footer-open"
    ng-reflect-klass="left-sidebar-footer"
    ng-reflect-ng-class="[object Object]"
  >
    
    
    <i
      class="fa fa-lg fa-angle-double-left left-sidebar-icon-open"
      ng-reflect-klass="fa fa-lg"
      ng-reflect-ng-class="[object Object]"
    />
    
  
  </div>
  
</pf-layout-wrapper-left-sidebar>
`;
